fix: role fetching