@@ -1,17 +1,16 @@
 package com.stocker.api.service.impl;
 
+import com.stocker.api.domain.data.repository.UserRepository;
 import com.stocker.api.domain.dto.auth.LoginRequest;
 import com.stocker.api.domain.dto.auth.TokenResponse;
-import com.stocker.api.domain.entity.User;
 import com.stocker.api.domain.entity.Role;
-import com.stocker.api.domain.repository.UserRepository;
+import com.stocker.api.domain.entity.User;
 import com.stocker.api.service.AuthenticationService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.oauth2.jwt.JwtClaimsSet;
-import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.security.oauth2.jwt.JwtEncoder;
 import org.springframework.security.oauth2.jwt.JwtEncoderParameters;
 import org.springframework.stereotype.Service;
@@ -24,7 +23,6 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class AuthenticationServiceImpl implements AuthenticationService {
     private final JwtEncoder jwtEncoder;
-    private final JwtDecoder jwtDecoder;
     private final UserRepository userRepository;
     private final BCryptPasswordEncoder passwordEncoder;
 
@@ -36,7 +34,6 @@ public class AuthenticationServiceImpl implements AuthenticationService {
         Optional<User> user = userRepository.findByEmail(request.email());
 
         if (user.isEmpty() || !user.get().isLoginCorrect(request, passwordEncoder)) {
-
             throw new BadCredentialsException("User or password is invalid!");
         }
 
@@ -44,7 +41,7 @@ public class AuthenticationServiceImpl implements AuthenticationService {
 
         var scopes = user.get().getRoles()
                 .stream()
-                .map(Role::getName)
+                .map(Role::name)
                 .collect(Collectors.joining(" "));
 
         var claims = JwtClaimsSet.builder()
@@ -54,13 +51,12 @@ public class AuthenticationServiceImpl implements AuthenticationService {
                 .expiresAt(now.plusSeconds(expiresIn))
                 .claim("scope", scopes)
                 .claim("roles", user.get().getRoles().stream()
-                        .map(Role::getName)
-                        .toList())
+                        .map(Role::name)
+                        .collect(Collectors.toList()))
                 .build();
 
         var jwtValue = jwtEncoder.encode(JwtEncoderParameters.from(claims)).getTokenValue();
 
         return new TokenResponse(jwtValue, expiresIn);
     }
-
 }
